feat: update docs