@@ -27,25 +27,22 @@ CFG_TGBRIDGE_TOPIC_ID=123
 CFG_TGBRIDGE_BLUEMAP_URL=https://map.example.com
 MC_INIT_MEMORY=6G
 MC_MAX_MEMORY=16G
-USE_AIKAR_FLAGS=false
-MC_JVM_XX_OPTS=-XX:+UseZGC
+USE_AIKAR_FLAGS=true
 ```
 
 The Compose file uses `ghcr.io/alexcawl/mc-create-aeronautics-server:latest` when the server should track the current published build. Change the Minecraft service image to an immutable tag such as `ghcr.io/alexcawl/mc-create-aeronautics-server:v1` when the server should stay pinned.
 
-`MC_INIT_MEMORY` controls the initial Minecraft JVM heap size, and `MC_MAX_MEMORY` controls the maximum heap size. For a 32 GB VPS, `MC_INIT_MEMORY=6G` and `MC_MAX_MEMORY=16G` leave room for native memory, Docker, monitoring, OS cache, and world-generation worker threads. `MC_JVM_XX_OPTS` is passed to the JVM as `-XX` options and can be used to choose the garbage collector. The default uses ZGC:
+`MC_INIT_MEMORY` controls the initial Minecraft JVM heap size, and `MC_MAX_MEMORY` controls the maximum heap size. For a 32 GB VPS, `MC_INIT_MEMORY=6G` and `MC_MAX_MEMORY=16G` leave room for native memory, Docker, monitoring, OS cache, and world-generation worker threads.
 
-```dotenv
-USE_AIKAR_FLAGS=false
-MC_JVM_XX_OPTS=-XX:+UseZGC
-```
-
-Do not enable `USE_AIKAR_FLAGS` at the same time as ZGC, because Aikar's bundled flags select G1GC. To switch back to Aikar/G1GC, use:
+The current Compose file exposes `USE_AIKAR_FLAGS` and the committed default enables it:
 
 ```dotenv
 USE_AIKAR_FLAGS=true
-MC_JVM_XX_OPTS=
 ```
+
+With `itzg/minecraft-server:java21`, this selects Aikar's G1GC-oriented JVM flags. Keep `USE_AIKAR_FLAGS=false` if you need to run the JVM without those bundled flags. The deployment currently does not pass custom `JVM_XX_OPTS`/`JVM_OPTS` through Compose; add those environment variables to `compose.yaml` first if a future deployment needs a different garbage collector such as ZGC.
+
+Do not enable Aikar flags and ZGC together, because Aikar's bundled flags select G1GC.
 
 Minecraft is published on TCP `25565`. Sable also uses UDP `25565` for its low-latency networking pipeline. BlueMap is published on TCP `8100`. Simple Voice Chat is published on UDP `24454`. The VPS firewall and provider firewall must allow TCP `25565`, UDP `25565`, TCP `8100`, and UDP `24454` when players should use all server features from the internet.
 
@@ -70,11 +67,17 @@ Start or update the server:
 
 ```sh
 docker compose pull minecraft
-docker compose down
+docker compose up -d minecraft
+```
+
+Start or update the full stack:
+
+```sh
+docker compose pull
 docker compose up -d
 ```
 
-The server image contains the packwiz metadata and synchronizes `/data/mods` on startup. A normal image pull and Compose restart is enough to refresh server-side mods. `docker compose down -v` does not delete `data/`, because `data/` is a bind-mounted directory in the repository, not a Docker named volume.
+The server image contains the packwiz metadata and synchronizes `/data/mods` on startup. A normal image pull and Compose recreate is enough to refresh server-side mods. `docker compose down -v` does not delete `data/`, because `data/` is a bind-mounted directory in the repository, not a Docker named volume. Do not use `down -v` unless you explicitly want to delete named monitoring and RCON volumes.
 
 Stop it:
 
@@ -110,7 +113,7 @@ Then open `http://localhost:4326`.
 
 Do not commit `data/`.
 
-Prometheus, Grafana, Loki, Alloy, and RCON Web Admin store runtime state in Docker named volumes.
+Prometheus, Grafana, Loki, Alloy, and RCON Web Admin store runtime state in Docker named volumes. These volumes are disk-backed Docker volumes, not tmpfs memory volumes, but Linux may cache their disk I/O in RAM as reclaimable page cache.
 
 ## Backups
 
